--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-# SubHunter Dependencies
-httpx>=0.25.0
+# SubHunter v3.0 Dependencies
+httpx>=0.24.0
 aiodns>=3.0.0
+
+# Optional: For screenshots
+playwright>=1.40.0
